--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "webpack"
     },
     "devDependencies": {
+        "copy-webpack-plugin": "^12.0.2",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.5",
         "webpack": "^5.64.4",
