--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,9 +1,10 @@
-name: Deploy
+name: Build and Deploy
 
 on:
   push:
     branches:
       - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '18'
 
     - name: Install dependencies
       run: npm install
