--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://<your-github-username>.github.io/<your-repository-name>",
+  "name": "Portfolio",
+  "version": "1.0.0",
+  "description": "Portfolio website",
+  "main": "dist/bundle.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
