--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^3.0.1",
-    "typescript": "^5.5.3",
     "web-vitals": "^4.2.1"
   },
   "scripts": {
@@ -45,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "typescript": "^3.4.5"
   }
 }
