--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "choices.js": "^10.2.0",
     "dayjs": "^1.11.11",
     "just-validate": "^4.3.0",
     "react": "^18.3.1",
