--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.24.1",
     "swiper": "^8.4.7"
   },
   "devDependencies": {
